--- a/res/layout/app_edit_bottom_sheet.xml
+++ b/res/layout/app_edit_bottom_sheet.xml
@@ -55,18 +55,14 @@
         android:singleLine="true"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="24sp"
-        android:layout_marginBottom="32dp"
-        app:customFontType="title"/>
+        android:layout_marginBottom="40dp"
+       />
 
-    <fragment
-        android:id="@+id/sheet_prefs"
-        android:name="com.google.android.apps.nexuslauncher.CustomBottomSheet$PrefsFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp" />
+
 
     <View
         android:id="@+id/nav_bar_bg"
+        android:visibility="gone"
         android:background="?attr/bottomSheetNavBarColor"
         android:layout_width="match_parent"
         android:layout_height="0dp"
