--- a/res/xml/lawnchair_search_preferences.xml
+++ b/res/xml/lawnchair_search_preferences.xml
@@ -31,11 +31,11 @@
             android:summary="@string/summary_search_hidden_apps"
             android:defaultValue="false" />
 
-        <ch.deletescape.lawnchair.colors.preferences.ColorPickerPreference
-            android:key="pref_allappsQsbColorResolver"
-            android:title="@string/pref_qsb_color"
-            app:colorMode="ARGB"
-            app:resolvers="@array/resolvers_allapps_qsb"/>
+<!--        <ch.deletescape.lawnchair.colors.preferences.ColorPickerPreference-->
+<!--            android:key="pref_allappsQsbColorResolver"-->
+<!--            android:title="@string/pref_qsb_color"-->
+<!--            app:colorMode="ARGB"-->
+<!--            app:resolvers="@array/resolvers_allapps_qsb"/>-->
     </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>
 
 </android.support.v7.preference.PreferenceScreen>
