--- a/res/layout/hotseat.xml
+++ b/res/layout/hotseat.xml
@@ -16,7 +16,9 @@
 <com.android.launcher3.Hotseat
     android:theme="@style/HomeScreenElementTheme"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:launcher="http://schemas.android.com/apk/res-auto">
+    xmlns:launcher="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
 
     <com.android.launcher3.CellLayout
         android:id="@+id/layout"
