--- a/lawnchair/res/values/resolvers.xml
+++ b/lawnchair/res/values/resolvers.xml
@@ -16,37 +16,4 @@
   ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <string-array name="resolvers_accent">
-        <item>ch.deletescape.lawnchair.colors.PixelAccentResolver</item>
-        <item>ch.deletescape.lawnchair.colors.SystemAccentResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperMainColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperSecondaryColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperTertiaryColorResolver</item>
-    </string-array>
-    <string-array name="resolvers_allapps_qsb">
-        <item>ch.deletescape.lawnchair.colors.resolvers.DrawerQsbAutoResolver</item>
-        <item>ch.deletescape.lawnchair.colors.resolvers.DrawerQsbLightResolver</item>
-        <item>ch.deletescape.lawnchair.colors.resolvers.DrawerQsbDarkResolver</item>
-        <item>ch.deletescape.lawnchair.colors.LawnchairAccentResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperMainColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperSecondaryColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperTertiaryColorResolver</item>
-    </string-array>
-    <string-array name="resolvers_workspace_labels">
-        <item>ch.deletescape.lawnchair.colors.resolvers.WorkspaceLabelAutoResolver</item>
-        <item>ch.deletescape.lawnchair.colors.LawnchairAccentResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperMainColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperSecondaryColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperTertiaryColorResolver</item>
-    </string-array>
-    <string-array name="resolvers_superg_background">
-        <item>ch.deletescape.lawnchair.colors.resolvers.SuperGAutoResolver</item>
-        <item>ch.deletescape.lawnchair.colors.resolvers.SuperGLightResolver</item>
-        <item>ch.deletescape.lawnchair.colors.resolvers.SuperGDarkResolver</item>
-        <item>ch.deletescape.lawnchair.colors.LawnchairAccentResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperMainColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperSecondaryColorResolver</item>
-        <item>ch.deletescape.lawnchair.colors.WallpaperTertiaryColorResolver</item>
-    </string-array>
-</resources>
+<resources></resources>
