--- a/res/layout/scrim_view.xml
+++ b/res/layout/scrim_view.xml
@@ -16,5 +16,4 @@
 <com.android.launcher3.views.ScrimView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/scrim_view" />
+    android:layout_height="match_parent" />
