--- a/res/values/bridge.xml
+++ b/res/values/bridge.xml
@@ -1,5 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <integer name="bridge_signature_hash">0xB662CC2F</integer>
-    <integer name="lawnfeed_signature_hash">0x7F7A957A</integer>
-</resources>
+<resources></resources>
