add splash screen git push

--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -18,11 +18,11 @@
   ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="tech.DevAsh.Launcher.SplashScreen">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
