--- a/res/xml/device_profiles.xml
+++ b/res/xml/device_profiles.xml
@@ -26,7 +26,7 @@
         launcher:numFolderRows="3"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="4"
-        launcher:iconSize="56"
+        launcher:customIconSize="56"
         launcher:landscapeIconSize="54"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_4x4"
@@ -41,7 +41,7 @@
         launcher:numFolderRows="3"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="4"
-        launcher:iconSize="56"
+        launcher:customIconSize="56"
         launcher:landscapeIconSize="54"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_4x4"
@@ -56,7 +56,7 @@
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="5"
-        launcher:iconSize="54"
+        launcher:customIconSize="54"
         launcher:landscapeIconSize="48"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_5x5"
@@ -71,7 +71,7 @@
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="5"
-        launcher:iconSize="56"
+        launcher:customIconSize="56"
         launcher:landscapeIconSize="54"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_4x5"
@@ -86,7 +86,7 @@
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="5"
-        launcher:iconSize="56"
+        launcher:customIconSize="56"
         launcher:landscapeIconSize="54"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_5x5"
@@ -101,7 +101,7 @@
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="5"
-        launcher:iconSize="54"
+        launcher:customIconSize="54"
         launcher:landscapeIconSize="52"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_5x5"
@@ -116,7 +116,7 @@
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="6"
-        launcher:iconSize="52"
+        launcher:customIconSize="52"
         launcher:landscapeIconSize="50"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_6x6"
@@ -131,7 +131,7 @@
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
         launcher:numHotseatIcons="6"
-        launcher:iconSize="64"
+        launcher:customIconSize="64"
         launcher:landscapeIconSize="64"
         launcher:iconTextSize="13.0"
         launcher:defaultLayoutId="@xml/default_workspace_5x6"
