--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -104,7 +104,7 @@
         <!-- numHotseatIcons defaults to numColumns, if not specified -->
         <attr name="numHotseatIcons" format="integer" />
 
-        <attr name="iconSize" format="float" />
+        <attr name="customIconSize" format="float" />
         <!-- landscapeIconSize defaults to iconSize, if not specified -->
         <attr name="landscapeIconSize" format="float" />
         <attr name="iconTextSize" format="float" />
