--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -81,10 +81,10 @@
     <string name="app_filter_class" translatable="false">com.google.android.apps.nexuslauncher.CustomAppFilter</string>
 
     <!-- Name of an icon provider class. -->
-    <string name="icon_provider_class" translatable="false">ch.deletescape.lawnchair.iconpack.LawnchairIconProvider</string>
+    <string name="icon_provider_class" translatable="false">tech.DevAsh.Launcher.iconpack.LawnchairIconProvider</string>
 
     <!-- Name of a drawable factory class. -->
-    <string name="drawable_factory_class" translatable="false">ch.deletescape.lawnchair.iconpack.LawnchairDrawableFactory</string>
+    <string name="drawable_factory_class" translatable="false">tech.DevAsh.Launcher.iconpack.LawnchairDrawableFactory</string>
 
     <!-- Name of a custom shortcut class. -->
 
