--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~     Copyright (C) 2020 Kiosk Team.
-  ~
-  ~     This file is part of Kiosk Launcher.
-  ~
-  ~     Kiosk Launcher is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     (at your option) any later version.
-  ~
-  ~     Kiosk Launcher is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with Kiosk Launcher.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    style="@style/splashScreen"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    tools:context="tech.DevAsh.Launcher.SplashScreen">
+    tools:context="tech.DevAsh.Launcher.SplashScreen"
+    >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="120dp"
+            app:cardCornerRadius="60dp"
+            android:layout_marginTop="20dp"
+            android:layout_height="120dp">
+            <ImageView
+                android:layout_margin="15dp"
+                android:layout_width="match_parent"
+                android:src="@drawable/app_icon"
+                app:srcCompat="@drawable/app_icon"
+                android:layout_height="match_parent"/>
+        </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="30dp"
+        style="@style/splashScreen"
+        android:fontFamily="@font/aguafina_script"
+        android:text="Handcrafted by DevAsh"
+        android:textSize="20dp" />
+</RelativeLayout>
