--- a/keyOS/res/layout/preview_icon.xml
+++ b/keyOS/res/layout/preview_icon.xml
@@ -16,7 +16,8 @@
   ~     along with Kiosk Launcher.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<com.android.internal.widget.PreferenceImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.android.internal.widget.PreferenceImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/icon"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
