--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    style="@style/splashScreen"
+    android:fitsSystemWindows="false"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
@@ -36,6 +36,7 @@
         android:layout_centerInParent="true"
         android:layout_marginBottom="30dp"
         style="@style/splashScreen"
+        android:id="@+id/greetings"
         android:fontFamily="@font/aguafina_script"
         android:text="Handcrafted by DevAsh"
         android:textSize="20dp" />
