add exit button

--- a/res/layout/drop_target_bar.xml
+++ b/res/layout/drop_target_bar.xml
@@ -34,13 +34,13 @@
         android:text="@string/remove_drop_target_label" />
 
     <!-- Uninstall target -->
-    <com.android.launcher3.SecondaryDropTarget
-        android:id="@+id/uninstall_target_text"
-        style="@style/DropTargetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/uninstall_drop_target_label" />
+<!--    <com.android.launcher3.SecondaryDropTarget-->
+<!--        android:id="@+id/uninstall_target_text"-->
+<!--        style="@style/DropTargetButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:gravity="center"-->
+<!--        android:text="@string/uninstall_drop_target_label" />-->
 
 </com.android.launcher3.DropTargetBar>
