--- a/res/layout/options_view.xml
+++ b/res/layout/options_view.xml
@@ -33,8 +33,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:drawablePadding="4dp"
-        android:drawableTop="@drawable/ic_wallpaper"
+        android:drawablePadding="7dp"
+        android:drawableTop="@drawable/exit"
         android:drawableTint="?attr/workspaceTextColor"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center_horizontal"
