added password prompt

--- a/keyOS/res/layout/fragment_password_prompt_sheet.xml
+++ b/keyOS/res/layout/fragment_password_prompt_sheet.xml
@@ -1,13 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tech.DevAsh.Launcher.settings.ui.SettingsBottomSheet
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/top_round_rect_primary"
     android:elevation="@dimen/deep_shortcuts_elevation"
     android:layout_gravity="bottom"
     android:id="@+id/content"
     android:theme="?attr/widgetsTheme">
 
-</tech.DevAsh.Launcher.settings.ui.SettingsBottomSheet>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:background="@color/background"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:textSize="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:text="Password"
+            android:layout_marginBottom="15dp"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="20dp"
+            android:drawablePadding="20dp"
+            android:drawableRight="@drawable/ic_info"
+            android:drawableTint="@color/sb__text_color"
+            android:text="if you haven't change your password yet \nplease try 1234"
+            android:layout_marginBottom="20dp"
+            android:layout_height="wrap_content"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content">
+
+                    <tech.DevAsh.Launcher.settings.ui.search.SettingsSearchView
+                        android:id="@+id/search_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingStart="-4dp"
+                        android:layout_marginHorizontal="15dp"
+                        android:paddingEnd="0dp"
+                        android:inputType="textPassword"
+                        android:iconifiedByDefault="false"
+                        android:imeOptions="actionSearch|flagNoExtractUi"
+                        android:searchIcon="@null"/>
+        </FrameLayout>
+        <TextView
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="match_parent"
+            android:text="forget ?"
+            android:textColor="@color/icon_background"
+            android:layout_height="wrap_content"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="20dp"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/changeButton"
+                android:background="@color/icon_background"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_height="40dp"
+                android:text="DONE"
+            />
+        </RelativeLayout>
+
+
+
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
