--- a/keyOS/res/layout/fragment_password_prompt_sheet.xml
+++ b/keyOS/res/layout/fragment_password_prompt_sheet.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,10 +16,10 @@
         android:layout_height="match_parent">
         <TextView
             android:layout_width="match_parent"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
-            android:text="Password"
+            android:text="@string/password"
             android:layout_marginBottom="15dp"
             android:layout_height="wrap_content"/>
         <TextView
@@ -36,22 +36,23 @@
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content">
 
-                    <tech.DevAsh.Launcher.settings.ui.search.SettingsSearchView
-                        android:id="@+id/search_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingStart="-4dp"
-                        android:layout_marginHorizontal="15dp"
-                        android:paddingEnd="0dp"
-                        android:inputType="textPassword"
-                        android:iconifiedByDefault="false"
-                        android:imeOptions="actionSearch|flagNoExtractUi"
-                        android:searchIcon="@null"/>
+            <tech.DevAsh.Launcher.settings.ui.search.SettingsSearchView
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="-4dp"
+                android:layout_marginHorizontal="15dp"
+                android:paddingEnd="0dp"
+                android:inputType="textPassword"
+                android:iconifiedByDefault="false"
+                android:imeOptions="actionSearch|flagNoExtractUi"
+                android:searchIcon="@null"/>
         </FrameLayout>
         <TextView
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
+            android:id="@+id/forget"
             android:text="forget ?"
             android:textColor="@color/icon_background"
             android:layout_height="wrap_content"/>
@@ -61,7 +62,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content">
             <Button
-                android:id="@+id/changeButton"
+                android:id="@+id/done"
                 android:background="@color/icon_background"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
