--- a/keyOS/res/layout/activity_edit_app.xml
+++ b/keyOS/res/layout/activity_edit_app.xml
@@ -131,8 +131,72 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/blockActivities"
                     android:layout_marginTop="10dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="10dp"
+                        app:cardCornerRadius="17.5dp"
+                        app:cardElevation="0dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="7dp"
+
+                            app:srcCompat="@drawable/apps"
+                            app:tint="#03A9F4"/>
+                    </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="65dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="Hide Icon"
+                            android:textColor="@android:color/black"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="5dp"
+                            android:text="hide launcher / shortcut icon from KeyOS home "
+                            android:layout_marginRight="90dp"
+                            android:textSize="13dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true">
+
+                        <com.suke.widget.SwitchButton
+                            android:id="@+id/hideIcon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:sb_show_indicator="false" />
+                    </LinearLayout>
+
+
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:id="@+id/blockActivities"
+                    android:layout_marginTop="30dp">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="35dp"
@@ -290,8 +354,8 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:padding="6dp"
-                            app:srcCompat="@drawable/apps"
+                            android:padding="4dp"
+                            app:srcCompat="@drawable/ic_info"
                             app:tint="#fc8210"/>
                     </androidx.cardview.widget.CardView>
 
