did some modification

--- a/keyOS/res/layout/activity_phone_calls.xml
+++ b/keyOS/res/layout/activity_phone_calls.xml
@@ -348,7 +348,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center"
-                                android:text="Whitelist Calls"
+                                android:text="Whitelist Contacts"
                                 android:textColor="@android:color/black"
                                 android:textSize="16dp" />
 
@@ -411,7 +411,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center"
-                                android:text="Blacklist Calls"
+                                android:text="Blacklist Contacts"
 
                                 android:textColor="@android:color/black"
                                 android:textSize="16dp" />
