need to fix get time usage bug

--- a/keyOS/res/layout/fragment_password_prompt_sheet.xml
+++ b/keyOS/res/layout/fragment_password_prompt_sheet.xml
@@ -41,11 +41,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingStart="-4dp"
+                android:imeOptions="actionDone"
                 android:layout_marginHorizontal="15dp"
                 android:paddingEnd="0dp"
                 android:inputType="textPassword"
                 android:iconifiedByDefault="false"
-                android:imeOptions="actionSearch|flagNoExtractUi"
                 android:searchIcon="@null"/>
         </FrameLayout>
         <TextView
