--- a/keyOS/res/drawable/background_sheet.xml
+++ b/keyOS/res/drawable/background_sheet.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:startColor="@android:color/white"
         android:endColor="@android:color/white" />
-<!--    <corners android:topRightRadius="10dp"-->
-<!--        android:topLeftRadius="10dp" />-->
+    <corners android:radius="10dp" />
+
 </shape>
