--- a/keyOS/res/layout/sheet_permissions.xml
+++ b/keyOS/res/layout/sheet_permissions.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list"
     android:layout_width="match_parent"
+    android:background="@drawable/background_sheet"
     android:layout_height="match_parent"
     android:clipToPadding="false"
    >
